Bug 167630 - "Assertion `!bAlphaMaskTransparent && "TODO"' failed." when trying to start LO with gen VCL plugin
Summary: "Assertion `!bAlphaMaskTransparent && "TODO"' failed." when trying to start L...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-07-22 06:38 UTC by Michael Weghorn
Modified: 2025-07-22 13:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-07-22 06:38:18 UTC
Steps to reproduce:
Try to start LO git master debug build with SAL_USE_VCLPLUGIN=gen on Linux

Actual result: An assert is triggered:
    soffice.bin: /home/michi/development/git/libreoffice/vcl/unx/generic/gdi/salvd.cxx:235: virtual bool X11SalVirtualDevice::SetSize(tools::Long, tools::Long, bool): Assertion `!bAlphaMaskTransparent && "TODO"' failed.

Expected result: The application should start.

This is with git master as of c2f9e4f16adbe438a09fb3fec8ecd668e5c41012.
Comment 1 Michael Weghorn 2025-07-22 06:39:09 UTC
The assert that triggers was added in

commit 088a7c7c451321a800ca8d3523a18b6bb93239b7 (HEAD)
Author: Noel Grandin
Date:   Tue Sep 24 16:18:11 2024 +0200

    remove alpha device from OutputDevice
Comment 2 Commit Notification 2025-07-22 11:53:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2951e2ac0e80fc982cd1fe52a849f40e44da65dc

tdf#167630 "assert !bAlphaMaskTransparent" with gen VCL plugin

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2025-07-22 13:40:45 UTC
Thanks! Fix verified with

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2951e2ac0e80fc982cd1fe52a849f40e44da65dc
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded