tdf#167630 "assert !bAlphaMaskTransparent" with gen VCL plugin

regression from
    commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Sep 24 16:18:11 2024 +0200
    remove alpha device from OutputDevice

Change-Id: I2b38b4d714bca66df0c3bd6a40fcbcb1cddb778c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188140
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins